--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,18 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard] (>=0.119.1,<0.120.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "psycopg2-binary (>=2.9.11,<3.0.0)"
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "requests (>=2.32.5,<3.0.0)",
+    "beautifulsoup4 (>=4.14.2,<5.0.0)",
+    "pandas (>=2.3.3,<3.0.0)"
 ]
 
 [tool.poetry]
 packages = [{include = "project_api_data_orchestrator", from = "src"}]
 
+
+[tool.poetry.group.dev.dependencies]
+jupyterlab = "^4.4.10"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
